# rustico

./: .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE.md  README.md  VERSIONING.md  mkdocs.yml  pyproject.toml  todo.md
.github/workflows/: deploy-docs.yml
docs/: comparison.md  contributing.md  examples.md  index.md  installation.md  quickstart.md  rustico.md
docs/api/: rustico.md  rustico.rustico.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/autoapi/rustico/: index.html
site/autoapi/rustico/rustico/: index.html
site/autoapi/summary/: index.html
site/comparison/: index.html
site/contributing/: index.html
site/examples/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
src/: __init__.py  rustico.py
src/rustico/: __init__.py  rustico.py
tests/: test_index.py
